# tei

./: .gitignore  README.md  pyproject.toml
tei/: __init__.py  client.py
test/: test.py
