[project]
name = "teicli"
version = "0.3.2"
description = "Text Embeddings Inference (TEI)'s unofficial python wrapper library for batch processing with asyncio"
authors = [
    { name = "seonglae", email = "sungle3737@gmail.com" }
]
dependencies = [
    "requests>=2.31.0",
    "aiohttp>=3.8.6",
]
readme = "README.md"
requires-python = ">= 3.8.0"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "autopep8>=2.0.4",
    "mypy>=1.6.1",
]

[tool.hatch.metadata]
allow-direct-references = true
